fix view gift page
git-svn-id: svn://svn.orangeleap.com/tangerine/mpower/trunk@1229 0f581344-5646-3a48-8ded-616bfea576c6